# macos-network-monitor

./: LICENSE  README.md  build_app.sh  launcher.sh  pyproject.toml
src/netmonitor/: __init__.py  __main__.py  app.py
