[project]
name = "netmonitor"
version = "0.1.0"
description = "Real-time macOS network traffic monitor with GUI - per-process bandwidth visualization"
readme = "README.md"
authors = [
    { name = "Rick Lamers", email = "ricklamers@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
app = [
    "keyring>=25.0.0",
]
keywords = ["network", "monitor", "traffic", "bandwidth", "macos", "nettop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]

[project.scripts]
netmonitor = "netmonitor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
